--- a/package.json
+++ b/package.json
@@ -1,15 +1,12 @@
 {
   "name": "saki-hub",
   "version": "1.0.0",
-  "description": "Blox Fruits Event Tracker",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
-    "next": "^13.0.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "next": "^13.0.0"
   }
 }
